--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World. Please stand by.</h1>
-<img src="https://github.com/MitchelMayle/mitchelmayle.github.io/blob/master/ComputerWars.JPG"
+<img src="https://github.com/MitchelMayle/mitchelmayle.github.io/blob/master/ComputerWars.JPG">
 </body>
 </html>
