Cleaned up HTML code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <body>
-<h1><span style="text-decoration: underline;"><strong>Computer Wars v0.92B</strong></span></h1>
-<p></p>
-<p>This is my first command line game, programmed in C#.</p>
-<p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day. There are even chances in between each day that something good or bad will happen.</p>
-<p>You can click the link below to download the game.</p>
-<p><strong><img src="https://raw.githubusercontent.com/MitchelMayle/mitchelmayle.github.io/master/ComputerWars.JPG" alt="Computer Wars" width="477" height="259" /></strong></p>
-<p><span style="color: #0000ff;"><a style="color: #0000ff;" href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c">Download Computer Wars v0.92B</a></span></p>
-<p><span style="color: #0000ff;"><a style="color: #0000ff;" href="https://github.com/MitchelMayle/computer-wars">View source code on GitHub</a></span></p>
+	<h1><span style="text-decoration: underline;"><strong>Computer Wars v0.92B</strong></span></h1>
+	<p></p>
+	<p>This is my first command line game, programmed in C#.</p>
+	<p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day. There are even chances in between each day that something good or bad will happen.</p>
+	<p>You can click the link below to download the game.</p>
+	<p><strong><img src="https://raw.githubusercontent.com/MitchelMayle/mitchelmayle.github.io/master/ComputerWars.JPG" alt="Computer Wars" width="477" height="259" /></strong></p>
+	<p><a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c">Download Computer Wars v0.92B</a></p>
+	<p><a href="https://github.com/MitchelMayle/computer-wars">View source code on GitHub</a></p>
 </body>
 </html>
