--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
 	<p>You can click the link below to download the game.</p>
 	<p><strong><img src="https://raw.githubusercontent.com/MitchelMayle/mitchelmayle.github.io/master/ComputerWars.JPG" alt="Computer Wars" width="477" height="259" /></strong></p>
-	<p><a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c">Download Computer Wars v1.0</a></p>
-	<p><a href="https://github.com/MitchelMayle/computer-wars">View source code on GitHub</a></p>
+	<p><a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">Download Computer Wars v1.0</a></p>
+	<p><a href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a></p>
 </body>
 </html>
