--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 ﻿<!DOCTYPE html>
+<head>
+    <script src="Scripts/jquery-3.1.1.min.js"></script>
+    <link href="Scripts/styles.css" rel="stylesheet" />
+</head>
 <html>
 <body>
-	<h1><span style="text-decoration: underline;"><strong>Computer Wars v1.0</strong></span></h1>
-	<p></p>
-	<p>This is my first command line game, programmed in C#.</p>
-	<p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
-	<p>You can click the link below to download the game.</p>
-	<p><strong><img src="https://raw.githubusercontent.com/MitchelMayle/mitchelmayle.github.io/master/ComputerWars.JPG" alt="Computer Wars" width="477" height="259" /></strong></p>
-	<p><a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">Download Computer Wars v1.0</a></p>
-	<p><a href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a></p>
+
+    <div id="cwars">
+        <h1 id="title">Computer Wars v1.0</h1>
+
+        <br />
+
+        <p>This is my first command line game, programmed in C#.</p>
+        <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
+        <p>You can click the link below to download the game.</p>
+        <br />
+
+        <img src="https://raw.githubusercontent.com/MitchelMayle/mitchelmayle.github.io/master/ComputerWars.JPG" id="cwpic" />
+
+        <a class="link" href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">Download Computer Wars v1.0</a>
+
+        <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
+
+    </div>
+
 </body>
 </html>
