added solution, fixed image directory

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <p>You can click the link below to download the game.</p>
         <br />
 
-        <img src="https://raw.githubusercontent.com/MitchelMayle/mitchelmayle.github.io/master/ComputerWars.JPG" id="cwpic" />
+
+        <img src="Content/images/ComputerWars.JPG" id="cwpic"/>
 
         <a class="link" href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">Download Computer Wars v1.0</a>
 
