--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 
         <p>This is my first command line game, programmed in C#.</p>
         <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
-        <p>You can click the link below to download the game.</p>
+        <p>You can click the image below to download the game.</p>
         <br />
 
-
-        <img src="Content/images/ComputerWars.JPG" id="cwpic"/>
-
-        <a class="link" href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">Download Computer Wars v1.0</a>
+        <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c">
+            <img src="Content/images/ComputerWars.JPG" id="cwpic" />
+        </a>
 
         <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
 
