fixed link hover

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <img src="Content/images/ComputerWars.JPG" id="cwpic" />
         </a>
 
-        <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
+        <div class="link_div">
+            <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
+        </div>
 
     </div>
 
