attempt to fix favicon with masking

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿<!DOCTYPE html>
+<meta />
 <head>
+    <link rel="shortcut icon" href="favicon.ico" />
     <script src="Scripts/jquery-3.1.1.min.js"></script>
     <link href="Scripts/styles.css" rel="stylesheet" />
 </head>
