updated items after fowarding

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 ﻿<!DOCTYPE html>
-<meta />
 <head>
+    <title>Mitchel Mayle III</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <script src="Scripts/jquery-3.1.1.min.js"></script>
     <link href="Scripts/styles.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous">
+    </script>
 </head>
+
 <html>
 <body>
 
