--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous">
     </script>
+    <script src="Scripts/scripts.js"></script>
 </head>
 
 <html>
 <body>
 
-    <div id="cwars_div">
+    <div class="container">
         <h1 id="title">Computer Wars v1.0</h1>
 
         <br />
@@ -22,7 +23,7 @@
         <p>You can click the image below to download the game.</p>
         <br />
 
-        <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c">
+        <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
             <img src="Content/images/ComputerWars.JPG" id="cwpic" />
         </a>
 
