Added HopToIt and NPGeek

--- a/index.html
+++ b/index.html
@@ -12,6 +12,47 @@
 
 <html>
 <body>
+    <div class="container">
+        <h1 id="title">Hop To It</h1>
+
+        <br />
+
+        <p>Hop To It is a group project developed during my final two weeks at Tech Elevator.</p>
+        <p>Parents can create an account to log a child's physical activity.</p>
+        <p>Children are rewarded with play time and on-site currency as a reward for their activity.</p>
+
+        <a href="http://hoptoit.apphb.com" target="_blank">
+            <img src="Content/images/HopToIt.JPG" class="picture" />
+        </a>
+
+        <div class="link_div">
+            <a class="link" href="http://hoptoit.apphb.com" target="_blank">Visit HopToIt</a>
+        </div>
+    </div>
+
+    <div class="container">
+        <h1 id="title">National Park Geek</h1>
+
+        <br />
+
+        <p>National Park Geek is a pair project developed at Tech Elevator.</p>
+        <p>The website displays national park information from a database, and simulates a weather forecast for each.</p>
+        <p>Users of the site can also submit a simple survey.</p>
+
+        <a href="http://npgeek.apphb.com" target="_blank">
+            <img src="Content/images/NPGeek.JPG" class="picture" />
+        </a>
+
+        <div class="link_div">
+            <a class="link" href="https://github.com/MitchelMayle/NPGeek" target="_blank">View source code on GitHub</a>
+        </div>
+
+        <div class="link_div">
+            <a class="link" href="http://npgeek.apphb.com" target="_blank">Visit National Park Geek</a>
+        </div>
+
+
+    </div>
 
     <div class="container">
         <h1 id="title">Computer Wars v1.0</h1>
@@ -24,7 +65,7 @@
         <br />
 
         <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
-            <img src="Content/images/ComputerWars.JPG" id="cwpic" />
+            <img src="Content/images/ComputerWars.JPG" class="picture" />
         </a>
 
         <div class="link_div">
