--- a/index.html
+++ b/index.html
@@ -3,76 +3,102 @@
     <title>Mitchel Mayle III</title>
 
     <link href="Scripts/styles.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous">
-    </script>
-    <script src="Scripts/scripts.js"></script>
+    <script src="Scripts/jquery-3.1.1.min.js"></script>
+    <script src="Scripts/bootstrap.min.js"></script>
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 
 <html>
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="nav navbar-nav">
+                <li><a href="https://drive.google.com/open?id=0B8zJ50LruVi0M3U1YmxvWHoxRkU">My Resume</a></li>
+                <li><a href="https://github.com/MitchelMayle">My GitHub</a></li>
+            </ul>
+            
+            <ul class="nav navbar-nav navbar-right">
+                <!--right side links go here-->
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
 <body>
-    <div class="container">
-        <h1 id="title">Hop To It</h1>
+    <div id="wholePage">
+        <div class="container">
+            <h1 id="title">Hop To It</h1>
 
-        <br />
+            <br />
 
-        <p>Hop To It is a group project developed during my final two weeks at Tech Elevator.</p>
-        <p>Parents can create an account to log a child's physical activity.</p>
-        <p>Children are rewarded with play time and on-site currency as a reward for their activity.</p>
+            <p>Hop To It is a group project developed during my final two weeks at Tech Elevator.</p>
+            <p>Parents can create an account to log a child's physical activity.</p>
+            <p>Children are rewarded with play time and on-site currency as a reward for their activity.</p>
 
-        <a href="http://hoptoit.apphb.com" target="_blank">
-            <img src="Content/images/HopToIt.JPG" class="picture" />
-        </a>
+            <a href="http://hoptoit.apphb.com" target="_blank">
+                <img src="Content/images/HopToIt.JPG" class="picture" />
+            </a>
 
-        <div class="link_div">
-            <a class="link" href="http://hoptoit.apphb.com" target="_blank">Visit HopToIt</a>
+            <div class="link_div">
+                <a class="link" href="http://hoptoit.apphb.com" target="_blank">Visit HopToIt</a>
+            </div>
+        </div>
+
+        <div class="container">
+            <h1 id="title">National Park Geek</h1>
+
+            <br />
+
+            <p>National Park Geek is a pair project developed at Tech Elevator.</p>
+            <p>The website displays national park information from a database, and simulates a weather forecast for each.</p>
+            <p>Users of the site can also submit a simple survey.</p>
+
+            <a href="http://npgeek.apphb.com" target="_blank">
+                <img src="Content/images/NPGeek.JPG" class="picture" />
+            </a>
+
+            <div class="link_div">
+                <a class="link" href="https://github.com/MitchelMayle/NPGeek" target="_blank">View source code on GitHub</a>
+            </div>
+
+            <div class="link_div">
+                <a class="link" href="http://npgeek.apphb.com" target="_blank">Visit National Park Geek</a>
+            </div>
+
+
+        </div>
+
+        <div class="container">
+            <h1 id="title">Computer Wars v1.0</h1>
+
+            <br />
+
+            <p>This is my first command line game, programmed in C#.</p>
+            <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
+            <p>You can click the image below to download the game.</p>
+            <br />
+
+            <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
+                <img src="Content/images/ComputerWars.JPG" class="picture" />
+            </a>
+
+            <div class="link_div">
+                <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
+            </div>
+
         </div>
     </div>
-
-    <div class="container">
-        <h1 id="title">National Park Geek</h1>
-
-        <br />
-
-        <p>National Park Geek is a pair project developed at Tech Elevator.</p>
-        <p>The website displays national park information from a database, and simulates a weather forecast for each.</p>
-        <p>Users of the site can also submit a simple survey.</p>
-
-        <a href="http://npgeek.apphb.com" target="_blank">
-            <img src="Content/images/NPGeek.JPG" class="picture" />
-        </a>
-
-        <div class="link_div">
-            <a class="link" href="https://github.com/MitchelMayle/NPGeek" target="_blank">View source code on GitHub</a>
-        </div>
-
-        <div class="link_div">
-            <a class="link" href="http://npgeek.apphb.com" target="_blank">Visit National Park Geek</a>
-        </div>
-
-
-    </div>
-
-    <div class="container">
-        <h1 id="title">Computer Wars v1.0</h1>
-
-        <br />
-
-        <p>This is my first command line game, programmed in C#.</p>
-        <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
-        <p>You can click the image below to download the game.</p>
-        <br />
-
-        <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
-            <img src="Content/images/ComputerWars.JPG" class="picture" />
-        </a>
-
-        <div class="link_div">
-            <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
-        </div>
-
-    </div>
-
 </body>
 </html>
