--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <li><a href="https://drive.google.com/open?id=0B8zJ50LruVi0M3U1YmxvWHoxRkU">My Resume</a></li>
+                <li><a href="Content/Mitchel Mayle III Resume.pdf">My Resume</a></li>
                 <li><a href="https://github.com/MitchelMayle">My GitHub</a></li>
             </ul>
             
