--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
                 <li><a href="Content/Mitchel Mayle III Resume.pdf">My Resume</a></li>
-                <li><a href="https://github.com/MitchelMayle">My GitHub</a></li>
+                <li><a href="https://github.com/MitchelMayle" target="_blank">My GitHub</a></li>
             </ul>
             
             <ul class="nav navbar-nav navbar-right">
