Added github link to hoptoit

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
             <div class="link_div">
                 <a class="link" href="http://hoptoit.apphb.com" target="_blank">Visit HopToIt</a>
             </div>
+
+            <div class="link_div">
+                <a class="link" href="https://github.com/MitchelMayle/HopToIt" target="_blank">View source code on GitHub</a>
+            </div>
+            
         </div>
 
         <div class="container">
@@ -68,13 +73,12 @@
             </a>
 
             <div class="link_div">
-                <a class="link" href="https://github.com/MitchelMayle/NPGeek" target="_blank">View source code on GitHub</a>
-            </div>
-
-            <div class="link_div">
                 <a class="link" href="http://npgeek.apphb.com" target="_blank">Visit National Park Geek</a>
             </div>
 
+            <div class="link_div">
+                <a class="link" href="https://github.com/MitchelMayle/NPGeek" target="_blank">View source code on GitHub</a>
+            </div>
 
         </div>
 
