Added link to web computerwars

--- a/index.html
+++ b/index.html
@@ -35,7 +35,34 @@
         </div><!-- /.container-fluid -->
     </nav>
 
+    
+
     <div id="wholePage">
+
+        <div class="container">
+            <h1 id="title">Computer Wars</h1>
+
+            <br />
+
+            <p>This is my first command line game, programmed in C#.</p>
+            <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
+            <p>You can click the image below to download the game.</p>
+            <p>I have begun converting this project into a web application as well.</p>
+            <br />
+
+            <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
+                <img src="Content/images/ComputerWars.JPG" class="picture" />
+            </a>
+
+            <div class="link_div">
+                <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View console source on GitHub</a>
+            </div>
+            <div class="link_div">
+                <a class="link" href="http://computerwars.apphb.com" target="_blank">View web version</a>
+            </div>
+
+        </div>
+
         <div class="container">
             <h1 id="title">Hop To It</h1>
 
@@ -81,26 +108,7 @@
             </div>
 
         </div>
-
-        <div class="container">
-            <h1 id="title">Computer Wars v1.0</h1>
-
-            <br />
-
-            <p>This is my first command line game, programmed in C#.</p>
-            <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
-            <p>You can click the image below to download the game.</p>
-            <br />
-
-            <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
-                <img src="Content/images/ComputerWars.JPG" class="picture" />
-            </a>
-
-            <div class="link_div">
-                <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View source code on GitHub</a>
-            </div>
-
-        </div>
+  
     </div>
 </body>
 </html>
