Added apphb computer wars

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 
             <br />
 
-            <p>This is my first command line game, programmed in C#.</p>
+            <p>This started as my first C# command line game, and has been converted into an ASP.NET MVC application.</p>
             <p>You start with $1000 to buy/sell computer parts in 30 days. Prices of the parts will change randomly every day.</p>
-            <p>You can click the image below to download the game.</p>
-            <p>I have begun converting this project into a web application as well.</p>
+            <p>Click the image below to go to the web version.</p>
             <br />
 
-            <a href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">
+            <a href="http://computerwars.apphb.com" target="_blank">
                 <img src="Content/images/ComputerWars.JPG" class="picture" />
             </a>
 
@@ -58,8 +57,10 @@
                 <a class="link" href="https://github.com/MitchelMayle/computer-wars" target="_blank">View console source on GitHub</a>
             </div>
             <div class="link_div">
-                <a class="link" href="http://computerwars.apphb.com" target="_blank">View web version</a>
+                <a class="link" href="https://drive.google.com/open?id=0B8zJ50LruVi0TndibmVzcGFkX2c" target="_blank">Download ComputerWars.exe</a>
             </div>
+
+            
 
         </div>
 
