--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="Content/Mitchel Mayle III Resume.pdf">My Resume</a></li>
+                    <li><a href="https://drive.google.com/file/d/0B8zJ50LruVi0M3U1YmxvWHoxRkU/view?usp=sharing">My Resume</a></li>
                     <li><a href="https://github.com/MitchelMayle" target="_blank">My GitHub</a></li>
                 </ul>
 
